# rust-pg-backend

./: Dockerfile  README.md  docker-compose.yml
app/: Cargo.toml  Dockerfile
app/src/: database.rs  domain.rs  error.rs  lib.rs  main.rs  web.rs
app/tests/: api_test.rs
migrate/: 20201002093656_init_db.sql  Dockerfile
