[package]
name = "app"
version = "0.1.0"
authors = ["xinyuan.yao <yao.ntno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
actix-web = "3"
actix-rt = "1"

uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

mobc = "0.5"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }

thiserror = "1"
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"] }
